# sing-box-subscribe

./: .gitignore  README.rst  gh_proxy_helper.py  main.py  providers.json  pyproject.toml  tool.py
.github/: README.rst
config_template/: config_template_groups_rule_set_tun.json  config_template_groups_rule_set_tun_fakeip.json  config_template_no_groups_tun_VN.json  nanarino-config.json  sb-config-1.12.json
